# MIPT_CPP

./: README.md  a.out  complex_image.ppm  complex_movie.cpp
firsrt_week/code/: a.out  complex_image.ppm  complex_test.cpp  homework  main.cpp
fith_week/classroom_tasks/.svn/: wc.db
fith_week/homework/01_slide/: main.cpp
fith_week/homework/02_string_vector_reverse/: main.cpp
fith_week/homework/03_is_uppper/: main.cpp
fith_week/homework/04_is_identifier/: main.cpp
fith_week/homework/05_move_spaces/: main.cpp
second_week/code/0book/: 00oop.cpp  01book.c  02book.cpp  03book_encapsulation.cpp  04problem_movie  04problem_movie.cpp  04problem_movie_solution.cpp  05this_pointer.cpp  06constructor.cpp  06constructor_solution.cpp  07public_private.cpp  08constructor_calls.cpp  08constructor_calls_solution.cpp  09class.cpp  10m.cpp
second_week/code/1point/: 00point.c  00point_solution.c  01point.cpp  01point_solution.cpp  02operator_order.cpp  02operator_order_solution.cpp  03setters_getters.cpp
second_week/code/2string/: 00string.cpp  01constructor.cpp  01constructor_solution.cpp  02delegated_constructor.cpp  03destructor.cpp  04operator_addition.cpp  04operator_addition_solution1.cpp  04operator_addition_solution2.cpp  05operator_assignment.cpp  05operator_assignment_solution.cpp  (+24 more)
third_sem/2sfml/: main.py
third_sem/ninth_week/: final
third_sem/seminar10_window/homework/circle_collision/: CMakeLists.txt
third_sem/seminar10_window/homework/circle_collision/src/: 2circle_closest_point.cpp  4circle_line.cpp  6raycasting_circle_line.cpp  Makefile
(+265 files in other folders)
